# eumdac-fetch

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  cli.md  conf.py  configuration.md  filters.md  getting-started.md  index.rst  post-processing.md  requirements.txt  session.md  state-database.md
docs/api/: index.rst
examples/: job.yaml  mtg-fci-hdfsi.yaml  mtg-fci-hrfi.yaml
src/eumdac_fetch/: __init__.py  auth.py  cli.py  config.py  dataset.py  display.py  downloader.py  env.py  filters.py  logging_config.py  models.py  pipeline.py  remote.py  search.py  session.py  state.py
tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_dataset.py  test_display.py  test_downloader.py  test_env.py  test_filters.py  test_integration_download.py  test_logging_config.py  test_models.py  test_pipeline.py  test_pipeline_modes.py  test_remote.py  test_search.py  test_session.py  test_state.py
